[package]
name = "pii_cherubim"
version = "0.1.0"
authors = ["Ruel Nopal <i.am@rnopal.com>"]
edition = "2021"

[dependencies]
regex = "1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
walkdir = "2.3"  # For recursive directory traversal
glob = "0.3"     # For pattern matching on file names

[lib]
name = "pii_cherubim"
path = "src/lib.rs"